tests/baselines/reference/parserForStatement8.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserForStatement8.ts(1,6): error TS2406: The left-hand side of a 'for...in' statement must be a variable or a property access.
tests/cases/conformance/parser/ecmascript5/Statements/parserForStatement8.ts(1,14): error TS2304: Cannot find name 'b'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserForStatement8.ts (2 errors) ====
    for (this in b) {
         ~~~~
!!! error TS2406: The left-hand side of a 'for...in' statement must be a variable or a property access.
                 ~
!!! error TS2304: Cannot find name 'b'.
    }